Use existing secret for grafana admin

--- a/cluster/apps/monitoring/monitoring-secrets.sops.yaml
+++ b/cluster/apps/monitoring/monitoring-secrets.sops.yaml
@@ -5,9 +5,10 @@ metadata:
     name: monitoring-secrets
     namespace: monitoring
 stringData:
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:mI2TXGyrO6YGVQn4KHGX0trRMLoRamQFDpBtc+Jk18vkT4RYzEgf5a++xG/ld89Z/MjbG1uvbrTCDTplgAwCzr+M3g5yZx6Y4pOJZXyvJ4blS0tEEdqh309qw8kg2yjCJP/wdihighXNzVmQvPz/3uMvKD2M6T6NN8NJF7QiOzIKJrq/rlX0cXYvatW3rWPJ2KY56Nqa9QteZRk4TCvt75N7oGvYSVkLTx1nhE6p+TEwwZNAiuPi,iv:PBj2W/XlbiMUotAI4KKce2nA/iqyngrv4hXCVIH3oLo=,tag:JOainJlOKxJyPSuBAtvmnQ==,type:str]
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:+RWHqDbIsVrcGdk/bu3Hoz+0xJ72AlueszMQFBKc3mcpu/mG3od50nlM0Czmmz2Hr6/ZyQnf3L6f626Eh7WAdE11Qx8u6DvZwYgROReRtB7ayTHSMHdGWKLwRaya0LB7xx4OnX8WqABrKo2jz4G9fkuT5txsFFuJ,iv:splGvHWZHgkwYYmaoSdxxb2FD6mZqa6vBaeckMZudig=,tag:qCfuMLNwp4tu8R2ImAAM0A==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:qnJqaTo+2sY/sm0+99NPbA==,iv:VeqBUD3cLqcnDY9QrsN/+GdPsvqXWjVVTqVfH84Ggyk=,tag:2WGudTl1sqBtkDNgGeTGjQ==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:bjI+lQV/Pr8WKO06johSS2aeNKTttMACpaWaEbHMu2dZRcIMMXAOtRUisAJD+MxQnAcYHFWOdtJUu752S8mvcYBPBa76dAAc0heYesvj6ucHCyW/yhfsilk9pkruantALOZ/fUif8DBb7PecskWvVgfjNy0r5KH/riUX+wZs2qzdPLnSECi3T1cKJK57FgHnhMogwSEaifr0GB9XkxbYJeD8TriBOI8DRhuQQGo/KTKlongL2LYM,iv:C2Vo8FGKQnCIdhkwqeUOBf+Qyvo+7qgEHILc5FN+vuQ=,tag:SOwR5vEKJU67PT2BM3lUvQ==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:z1y1+89k3EzRheQa0fIwuCZq2viYPRK7LWSzd10GXwtHQWnQ5Wyc2xUuMBYyOS7jZqfXkGMQrvfoKZzsrLvTaoNJXtVMw8Db3LvlmhF8Z9ovZj2GrP15h6SeU+5S7PuS+fVqO4bXnqAG5onJDUO0XkD2J9sxk/MY,iv:bFzGMcrFwFdYrI3HmoEso6sca6JIB+ChdwZ7OrBuqww=,tag:hAKr3djuzp0zWfUGfz93pA==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WAez6eeD9v7r6jvc1s3w9w==,iv:ZcGfKHBfWL8kSDfCNrcOqdLFc0/OeB3xL5F8h6bL8zk=,tag:vx5BSVLAcd0/7hv7r15iXw==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:pfAU0akNSf3x+A==,iv:k2f2/g1BpgGA3x6HInkhEDptqf6nTC/CFyrJXtHAylQ=,tag:by0NipWvHzO8s7PKPjuDkA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +18,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwc0VQSzNXSWg4Z2V4bXZ3
-            REdFdXNVOUtUNXdLc1NZcVFUWnhWL21FRm53CnAyOFBVT3dlNk5tUWpJVldyYzln
-            V2ZSdzFIYy9qYnhMK1Z6aWJZdDdENWMKLS0tIGN3c2pVaDVpaFNVYWRMRG84VTRs
-            WFhMMDhBZ25aa3RZSFhjYUg2NFdGTUEKjVttWC/BONYIqxPTw8OK9dnauYcebujm
-            z9qxtlUIUhHoIdjmpZwh32961YcyupO+DnNjUo65Iy79HxXh1vwojg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5d1BMT2RlMWpkd1FmRVQ5
+            OUJLRCtHMzhhOGMyTTIzMGptQzR3U3g0emdzClRVYldYL0liTHVHMXkzOUxLaXhN
+            WVROKytYQ0ppRFV6NlVweFNLOGovWXMKLS0tIGRTbElDZUtPNGJPbmZwekhKMFBS
+            N0lTazlCSXdLbHVoc1kveVNWaGhPZXcKOhbIM4rnr6WRxxVPCiTNRZL+bjbgUCb3
+            nGhScfp9sY7gfvQZY9Og7EOHY/nZoS66JgZho4qiItgJyDN3mO8dHg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T17:39:42Z"
-    mac: ENC[AES256_GCM,data:3jidq7LnfJKJmj6dlAXjjH7gRZabubp0uKgQaHeBY1M7rHT7t9ShWeumTaIZKpQffvV8ur7YzavIAAMbiT+MTWov5d6kTHjnVmC5xyludwVFFXBzmCU85Y7YCkBO3XfmsGP+SHcUpunNQ9ie5OIEEmSjUbQJUaXGEJvcm6K7YtM=,iv:EW/kLtiN/nrro73ahpWYF1WbmoJVU+D+rNH4fT6Qmig=,tag:OaKtCQfPQpoBqngQYIbkIQ==,type:str]
+    lastmodified: "2021-12-04T18:05:49Z"
+    mac: ENC[AES256_GCM,data:IWo2fdYqMMvCOv6ObsJemQuwP8UqgVuL/vAXUoSNoJkNnLjY5m6JLz7kgPGRkg13/OZoMoNJShxyu6jv0dwxq5ahHrj7o8v4AB16sG3U09GkKX+zW1osbUwBeXdyXGfCIOqnrbkd6Z6ADC5U/b1ZuHGMHRFsTELytjfgPLECces=,iv:DZ1C2X945YolW6x1PkC/DIEogpH4GuAmUQeWV+RLzs8=,tag:NnYGgd74j5sle7OTYhQW8A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
