--- a/cluster/apps/monitoring/monitoring-secrets.sops.yaml
+++ b/cluster/apps/monitoring/monitoring-secrets.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     name: monitoring-secrets
     namespace: monitoring
 stringData:
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:bjI+lQV/Pr8WKO06johSS2aeNKTttMACpaWaEbHMu2dZRcIMMXAOtRUisAJD+MxQnAcYHFWOdtJUu752S8mvcYBPBa76dAAc0heYesvj6ucHCyW/yhfsilk9pkruantALOZ/fUif8DBb7PecskWvVgfjNy0r5KH/riUX+wZs2qzdPLnSECi3T1cKJK57FgHnhMogwSEaifr0GB9XkxbYJeD8TriBOI8DRhuQQGo/KTKlongL2LYM,iv:C2Vo8FGKQnCIdhkwqeUOBf+Qyvo+7qgEHILc5FN+vuQ=,tag:SOwR5vEKJU67PT2BM3lUvQ==,type:str]
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:z1y1+89k3EzRheQa0fIwuCZq2viYPRK7LWSzd10GXwtHQWnQ5Wyc2xUuMBYyOS7jZqfXkGMQrvfoKZzsrLvTaoNJXtVMw8Db3LvlmhF8Z9ovZj2GrP15h6SeU+5S7PuS+fVqO4bXnqAG5onJDUO0XkD2J9sxk/MY,iv:bFzGMcrFwFdYrI3HmoEso6sca6JIB+ChdwZ7OrBuqww=,tag:hAKr3djuzp0zWfUGfz93pA==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WAez6eeD9v7r6jvc1s3w9w==,iv:ZcGfKHBfWL8kSDfCNrcOqdLFc0/OeB3xL5F8h6bL8zk=,tag:vx5BSVLAcd0/7hv7r15iXw==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:pfAU0akNSf3x+A==,iv:k2f2/g1BpgGA3x6HInkhEDptqf6nTC/CFyrJXtHAylQ=,tag:by0NipWvHzO8s7PKPjuDkA==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:oW2Kvv+k2fy5pfO03/pqx4FFxYqc0QujeBAyd/IwOaLiE82iWyg/4/e0SDup6dXBWLH5C/JToGHXwHuzy6XqDPbm9hQ9TqRQKqvU0cSzV7lmDkusirU/bp1nSeRwMFgQH3r2KeALVe4iyusRvzk00UEeEoD1Vd+3U7EAyrGRQ0Eb44ZSQ88CjgfDHU9pXKV+O/FFYVvN0f8dRcqjYChZBQ/DBQeNeFFWEJf/aUXdqGka20eiqiad,iv:9kCqkpcNBpRpxW4qdn9JPC2Wc7GJacHPp4zvhpLRdQY=,tag:eHKX1N/6Rup1l77WRJYYCQ==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:oh4B6ciaPDyMg2x1keTu3w28Q7buJeOp2V4mCGJfwDu91280VvhsX9Yw1xi8ykw/jkw/RhxNUpxpYTv+Tn6IMwp2sKBbm2j/LgW9+mXjbDPWldvWDHbfXxNZw5ZjCElq3ShmsFPdJGdbjLWyt794UkxwO1epa/xE,iv:+Yd2UqKI6I9R+BZdJytZknMicFZWHD92gK6EU1tZLlo=,tag:6gnw4yXX6EDm/o9v3P+45Q==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:k//8CMk58XW67FxPABORug==,iv:k43AedfTG9C8+LtbgQuvuIyg63e8OSzaWyqCC6zBLrI=,tag:nPr/ml4Opyu97z5aTFGdkA==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:VWutMwxwbr4vOg==,iv:ZV9e2FulFwJzqkfFs+LI/c6IHP0lEUspQU0m3mgJe9o=,tag:jmBTrlha+KOAIaiYCRBGzg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5d1BMT2RlMWpkd1FmRVQ5
-            OUJLRCtHMzhhOGMyTTIzMGptQzR3U3g0emdzClRVYldYL0liTHVHMXkzOUxLaXhN
-            WVROKytYQ0ppRFV6NlVweFNLOGovWXMKLS0tIGRTbElDZUtPNGJPbmZwekhKMFBS
-            N0lTazlCSXdLbHVoc1kveVNWaGhPZXcKOhbIM4rnr6WRxxVPCiTNRZL+bjbgUCb3
-            nGhScfp9sY7gfvQZY9Og7EOHY/nZoS66JgZho4qiItgJyDN3mO8dHg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwbTlXS3JUMHNUYWI5TjVx
+            NSs0S00rNlpxZUp5anRHNUZFMjlITkRncW1RCjZsTWZUbnJha09wb2dzMWlzSEov
+            LzUzY1NDUFV6V0EzaVhnYkY0bThFS2sKLS0tIEIrT1BZVUtyTktDSkdYYTFmVTZr
+            WW5pWU9XTGlGdkxITTRyVi9SM2NxaFEKCK2bBxHPsRaps3Y0BbuTgmT1QWTY2l/K
+            0g1kXvvvtRlBQ2V+UqzRgjCskhb2dPhYF8RNuhiRMiIRQYAjoGIyhw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T18:05:49Z"
-    mac: ENC[AES256_GCM,data:IWo2fdYqMMvCOv6ObsJemQuwP8UqgVuL/vAXUoSNoJkNnLjY5m6JLz7kgPGRkg13/OZoMoNJShxyu6jv0dwxq5ahHrj7o8v4AB16sG3U09GkKX+zW1osbUwBeXdyXGfCIOqnrbkd6Z6ADC5U/b1ZuHGMHRFsTELytjfgPLECces=,iv:DZ1C2X945YolW6x1PkC/DIEogpH4GuAmUQeWV+RLzs8=,tag:NnYGgd74j5sle7OTYhQW8A==,type:str]
+    lastmodified: "2021-12-04T18:16:33Z"
+    mac: ENC[AES256_GCM,data:hm5bYKCmbE6sXq6JO1+3sIxBWJRxbgY1qsarTT0olg3sdbJc0tDp6cIF6CKhVH0U+BFKLUato4LkolRUIZryfWXXfyx/SJYUSH9CWyPyFDkCvyPAYzMte3CbDRVbqTj4SvtKEShLJ7A097x6qsfxWG1ovnUKcdDy0IHZ93JPt3M=,iv:KMWkxKyKE9qMTdDT5VVXk7QjFEd6ExZgLPK+E8wzJXg=,tag:zpJeLNlyDPOGA82nfqwxHg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
