--- a/cluster/base/flux-system/gotk-sync.yaml
+++ b/cluster/base/flux-system/gotk-sync.yaml
@@ -25,3 +25,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  validation: client
+  # Enable decryption
+  decryption:
+    # Use the sops provider
+    provider: sops
+    secretRef:
+      # Reference the new 'sops-age' secret
+      name: sops-age
