Fix indent problem

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -50,12 +50,12 @@ spec:
         org_role: Viewer
       security:
         allow_embedding: true
-      adminUser: admin
-      adminPassword: "${SECRET_GRAFANA_ADMIN_PASSWORD}"
-      # admin:
-      #   existingSecret: monitoring-secrets
-      #   userKey: SECRET_GRAFANA_ADMIN_USER
-      #   passwordKey: SECRET_GRAFANA_ADMIN_PASSWORD
+      # adminUser: admin
+      # adminPassword: "${SECRET_GRAFANA_ADMIN_PASSWORD}"
+    admin:
+      existingSecret: monitoring-secrets
+      userKey: SECRET_GRAFANA_ADMIN_USER
+      passwordKey: SECRET_GRAFANA_ADMIN_PASSWORD
     ingress:
       enabled: true
       hostname: "grafana.${SECRET_DOMAIN}"
