Fix indent with grafana

--- a/cluster/apps/monitoring/monitoring-secrets.sops.yaml
+++ b/cluster/apps/monitoring/monitoring-secrets.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     name: monitoring-secrets
     namespace: monitoring
 stringData:
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:oW2Kvv+k2fy5pfO03/pqx4FFxYqc0QujeBAyd/IwOaLiE82iWyg/4/e0SDup6dXBWLH5C/JToGHXwHuzy6XqDPbm9hQ9TqRQKqvU0cSzV7lmDkusirU/bp1nSeRwMFgQH3r2KeALVe4iyusRvzk00UEeEoD1Vd+3U7EAyrGRQ0Eb44ZSQ88CjgfDHU9pXKV+O/FFYVvN0f8dRcqjYChZBQ/DBQeNeFFWEJf/aUXdqGka20eiqiad,iv:9kCqkpcNBpRpxW4qdn9JPC2Wc7GJacHPp4zvhpLRdQY=,tag:eHKX1N/6Rup1l77WRJYYCQ==,type:str]
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:oh4B6ciaPDyMg2x1keTu3w28Q7buJeOp2V4mCGJfwDu91280VvhsX9Yw1xi8ykw/jkw/RhxNUpxpYTv+Tn6IMwp2sKBbm2j/LgW9+mXjbDPWldvWDHbfXxNZw5ZjCElq3ShmsFPdJGdbjLWyt794UkxwO1epa/xE,iv:+Yd2UqKI6I9R+BZdJytZknMicFZWHD92gK6EU1tZLlo=,tag:6gnw4yXX6EDm/o9v3P+45Q==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:k//8CMk58XW67FxPABORug==,iv:k43AedfTG9C8+LtbgQuvuIyg63e8OSzaWyqCC6zBLrI=,tag:nPr/ml4Opyu97z5aTFGdkA==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:VWutMwxwbr4vOg==,iv:ZV9e2FulFwJzqkfFs+LI/c6IHP0lEUspQU0m3mgJe9o=,tag:jmBTrlha+KOAIaiYCRBGzg==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:YB+bOyuHIJgGewxobX1oeYUbCBdn2+RRCZopx3Kcx8k2uI96aHQDocqn3dIcUe7z+X+vrEyTf6zrG8x7cW8sGtDhhe/h45z46akqPpe97nrlLuADZP82F20G4AShWiAB+jgdm8g2XnNXzk6xfGr70m63d7giLA4aD+8BOTG+xNAF2thVxjIvqXdeX/YZ7tLxHvnMKDBWKr7pDcXlohc2k/qoliHGFLdRxQZTPREz3DBBoHpvMGEA,iv:+zvxbqq7JDW7hrAw2WrloepgSAfZKC5UqYo5AOkoXac=,tag:pGKY9Ju+DXOvInQKRaX3PQ==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:39lwccrpfyAO1nWSDQ2fKchr+oWyJ0KwcVXwyLLuEgl19uT1TG/bdId4Aj84DOVsZMaoFB6OwMLVjek/KA4WglHk3A45le+AC0skUaR32IMMygi/nQahdfiOp0/risrXAr5yMPFga4hZ8jUMPLHoUUoWzX78ZIf2,iv:IFQ6e0d4SOO9xk+NJhKGvoPOdR/UItnuf9KM7HztT50=,tag:xhgka5MUD7dkK52braelcg==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:+p4B8+7oQnyDFbZGkx6Pzw==,iv:Ib21HOCevlu959wvN/7k/sBLGZuE8nZGmemdU7BuhXg=,tag:l6uNoxxAZPO1xzoGsk5gJw==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:7H09jI8=,iv:NxOVmU1u5ClHpjqw9EPNpMG37Tu0h5Ir3Py0ieOQejQ=,tag:FIEtwiea9uQ3mlw2slKcnA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwbTlXS3JUMHNUYWI5TjVx
-            NSs0S00rNlpxZUp5anRHNUZFMjlITkRncW1RCjZsTWZUbnJha09wb2dzMWlzSEov
-            LzUzY1NDUFV6V0EzaVhnYkY0bThFS2sKLS0tIEIrT1BZVUtyTktDSkdYYTFmVTZr
-            WW5pWU9XTGlGdkxITTRyVi9SM2NxaFEKCK2bBxHPsRaps3Y0BbuTgmT1QWTY2l/K
-            0g1kXvvvtRlBQ2V+UqzRgjCskhb2dPhYF8RNuhiRMiIRQYAjoGIyhw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCOW4yTllEd3o1eHFhblE5
+            c2dFNHJwVDBuZkszdFIvckVBWmZFUUdOaGl3CitYa2pabHhwZ3oyNll4VytxenVo
+            bW4yN3RtbUlmOXg1WGErdktBcmtPcWsKLS0tIGg5K0RYdTYwdjU4Z1hCeTZESkJy
+            enJwckF4WDZkaDRvVy8wTml1Y1RUc0UKpS8lnYDXy03Vql4uCKklxSW/mEu5TTHw
+            buhxpSIS/KTv2l8NwT5mtdFMpMkv5J39CBW/zzgy4vEH+M77kQzpVA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T18:16:33Z"
-    mac: ENC[AES256_GCM,data:hm5bYKCmbE6sXq6JO1+3sIxBWJRxbgY1qsarTT0olg3sdbJc0tDp6cIF6CKhVH0U+BFKLUato4LkolRUIZryfWXXfyx/SJYUSH9CWyPyFDkCvyPAYzMte3CbDRVbqTj4SvtKEShLJ7A097x6qsfxWG1ovnUKcdDy0IHZ93JPt3M=,iv:KMWkxKyKE9qMTdDT5VVXk7QjFEd6ExZgLPK+E8wzJXg=,tag:zpJeLNlyDPOGA82nfqwxHg==,type:str]
+    lastmodified: "2021-12-04T19:06:18Z"
+    mac: ENC[AES256_GCM,data:mpUg5hl1xfAaSONS/sCHKzuzEdrzDf5p9pKl3u5BE4OHDksUWxkcGeyyT9xgPP4Rg5M2zlFQSzNrUsYOmYYUYV8ElXUQPEpEqrp3hXzB/WfOB+YE7Yyzyu1xnbPBkhRD3yB8GSotLbxRRmHjHH+jcOO6U967sxfXXo1gdX2ewg4=,iv:omR7w4pQ45o4VUUeZ044le5WLJvk3QRYf6ivXpKeSSc=,tag:caT8BWKIX1vNTdB8hzVxhQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
