--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,15 +5,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:vxPDvAyw22MZ,iv:V3oIOMTWHVvAC17r1mJqddP365nBII1j35mVeGm65d4=,tag:aUdl0TI87YO/yqgxZwUYZw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:mJdzkyTHT94E,iv:b//obKZ/8XKXw6JuXEkFh+AeuRYXq3BSmvS+459hSO8=,tag:/c/SG+PobGiiK05ayMdTiQ==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:qWZvIXR9EOLgPWUAG/s=,iv:4LD94x5FPlg7CrC1daU4wGNaSLQCUjJTyrAU9vtMpXs=,tag:FgUjFVtW25Kuvav+EFBPPQ==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:QB6U84u2dqGAPuFB/haNKA==,iv:pmKaElKAHbiwa7gm/LYMtcANmkxAlDXz94EE+crTzHM=,tag:IeBBstCn8J7rxbhjCBNgbQ==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:G1qFvE/M0s97HySU4MU=,iv:ERFJg0zzTER9h8EgAvxZVPuGIO97S0KfC+OD29klEfg=,tag:oAIbrgJA7jNEaSGEHOZGvA==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:sRvSIHM+O8V7o/8PHQ==,iv:MXUwKnsXCdadXl9i86FJs03GZNoPyLnLvRaYlRgc60k=,tag:AIg8uoPnW+bf/Blep+FXDQ==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:YU8GMPw8ONJyVVMmVA==,iv:PhJiGWF5wFWqcBuNXRcscjb6qYU2bQARG/0KOm92owQ=,tag:CofFHDHqqlp1gjHENoDDfg==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:+/wyXkOdj28YkAD/3ugrFxCXu+c3OE1yVxMAFfdbQzNliP9tembxgV6tKU3wniiDEukRWWEAIxM9pdEg2CSNaSFWwRdLuLIJ1QnlE0o12U1EEeFM64aJoXTM7MaULKL0U/v1FY9XKDoFP5IKbV+f7UjT+dbHtezz1E8wAGqNJbhDRHQYNJ096gzQv3jt6Er3TfdFGf2Tv1lIDbULgjxzCzId8TVbu+xZ7MTCBPfwXuMy6OU1B+MZ,iv:hLJZS60aA+pEzMXBc1owx31EkBfITLDeA3TFK2QNXPE=,tag:TEYrKk/dMgBw6aFlG9O7TA==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:wZkbFz1L9erYJev0QhhYww==,iv:czhuILYWMtL/fbBWOHe9kNnnUeClAwrJbiAkyD++Zfs=,tag:urhRrwvVkSp/4WBVqCmNXw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:QWDxHYA5/9w9wRF6pv0=,iv:cyrnf+/8Vt6pMtB3YCHhjXZTfs5bJy9zRCESqefBoNs=,tag:q7dcj7tG3fnMPUYdL5gG8w==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:rl7ltMQ0lzgoldcWwboaTw==,iv:5jPhMN6lbLwDscxqC+SQoyH2FJ1qBDsEz3FtRxxTnqU=,tag:JbeRz4BrZkSazlgpt1+qdQ==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:OU1YnIvhGQFVT2W87d4=,iv:e/u50XgOO4g1uORNqWdkwKRdU2wjL2xRCZYB+TGVF8M=,tag:L+VIQVYDkbLCqZF2yOvFXg==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:9sgUJPzlqcg7dgzCxg==,iv:qanAvlnz5vqCqN/iAJPCOQW06ui9XOdeX8miOhziKvI=,tag:J6K3V394XUSSch3Mk/jShg==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:UYDruSfqS0AOrJNeSw==,iv:AfvaR7bLc8TPsaFR04sjcgP4R427ogLP47TgeirzXs8=,tag:vHRp+fcmM2bg7MYKnfKdHg==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:rvhUZecACZ9+xuY1oWskl/XOFHR7i7x++Nnbk4H/AMXzAySxLiQMt37FWArnpq8BX3VRRfXNO5fg7zIGMwDiWbJgTZt+lK2JxzNjTi4+K8swCMX4ysqi0Liy/C8RLyt32Ai7y3+Zv3NbHs91cyfR87MqnK583o8nX0WxM/xCLWWeNaSae3CJpqlyyGfq0SxJbx4fxpegiClgPEpnC0FOHYh1DduLqpxtmHJjQ/cL6Oxf33Z2cd1Z,iv:vcJ7gBqXD8+U61mfQTCQ5bnnAmUBRk1AFkl6dOesA9I=,tag:3PR/jtvy4juCkOJ2hU4VrQ==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:kl9B5Bk=,iv:+5UaznxM0cQEKxZvhdSk00yxk1QpRWhZaIbJ0pIfe5o=,tag:2UKLL2lnCho1f9f00rKGTA==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:dU9J8kGiS00tD9dZuI+mTA==,iv:zCt+pubfObakSZD8GIIjPf3gb9lygOgFLWWbCG4PQjY=,tag:kyMNPJyZiMXbTi6xw277DA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +24,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJUUNycjUxbm5KeDM4TXdF
-            cUpSbVF3Sm1sNld6bStJTWtvR1QxSWFqNkNNClZyaWkwZFhDNS9XdU45eDlrMm90
-            QU9WRDdKelNFcHNWTXdyS3pSMFA5WGcKLS0tIDVBQzgrNTAzRFNkSzJuNEF2Unh4
-            Um5ESU80bFJRaDRLMWVRMmlIUXhBSnMKrZfCTK63lnM2QNDHj4QRPJgk1G5sI+iz
-            CHMMy305dzksrA+kmu5aJcmEPwCQH0/8v8M1PxU7QGoMnHh2DP+j/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRMjVjS2VqV0FwOHVOYS85
+            RkxlVE94WnQzZDZyWlB2bjNIbFk0cFpBSzMwCmtrRnQxdUd5ejZiUDFVUktaSnMz
+            aWFyMkQyNEYrMTBCRkpUall6ei9RZTAKLS0tIGkzS290azYvVERnSEZKUURwWHBB
+            bGtHbi9QYUlRcE0vYmh0N1RjeU00elUK670ycDoKPRzduf98trsv7p7/+kRsA7jb
+            VTqD6N4J3HwypCV3r7MWhyTTqX6RICyFmwcTchdvb7TsU9m2w2p+bQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T17:38:35Z"
-    mac: ENC[AES256_GCM,data:74EYpnyeAWKv4ajsyhbxhNF8HXmYmKNJdV5tMP2scmYr4/cyBav3xO4J1vdP+ocHOfw2SpiHHUUc9KPFeu1QP8HAhXg7LQF1kfry7ER36UYYzrscXS9ZyTFI1KFxaK4Tbu19+Imf3GTS8DKrMUZomlz9EoCJZRoY/2M9VqtFyuA=,iv:Y47svEcMeZ926cjgulJQ3RjIxsEOhsilNmW3IxYthz0=,tag:ZUmce5UIdOHeLmFGOenX9w==,type:str]
+    lastmodified: "2021-12-04T19:52:13Z"
+    mac: ENC[AES256_GCM,data:m3Y/3tshRQmqDHg75cxVVnozbU183XUNzkWlv7+ESMu/O8iWphMoJ8yaWPt/3TjP/zGMu3eUGqFFx9A/jVRiSQqZUXs1VJHFZ9OuNfE5v4Ls1qU/Bstd32Wz1mkTVaWyxXpD86QOhXreKNoBRpl1ue23OksrJjYd++FA6l3IZSs=,iv:vHmZcIA17zsAOcqzBlSbZQO6mA2BsU/zPjkujVS3Npk=,tag:6PZ6A/EfANkHGbfaoaRYJQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
