--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -90,18 +90,26 @@ spec:
     - grafana-clock-panel
     - vonage-status-panel
     - grafana-worldmap-panel
-    # dashboardProviders:
-    #   dashboardproviders.yaml:
-    #     apiVersion: 1
-    #     providers:
-    #     - name: 'default'
-    #       orgId: 1
-    #       folder: ''
-    #       type: file
-    #       disableDeletion: false
-    #       editable: true
-    #       options:
-    #         path: /var/lib/grafana/dashboards/default
+    dashboardProviders:
+      dashboardproviders.yaml:
+        apiVersion: 1
+        providers:
+        - name: 'default'
+          orgId: 1
+          folder: 'Default'
+          type: file
+          disableDeletion: false
+          updateIntervalSeconds: 60
+          options:
+            path: /var/lib/grafana/dashboards/default
+        - name: 'smarthome'
+          orgId: 1
+          folder: 'Smarthome'
+          type: file
+          disableDeletion: false
+          updateIntervalSeconds: 60
+          options:
+            path: /var/lib/grafana/dashboards/smarthome
     datasources:
       datasources.yaml:
         apiVersion: 1
@@ -120,17 +128,16 @@ spec:
         node-exporter-full:
           url: https://grafana.com/api/dashboards/1860/revisions/22/download
           datasource: Prometheus
-        # apc-ups:
-        #   gnetId: 14371
-        #   revision: 1
-        #   datasource: Prometheus
-        # # Ref: https://grafana.com/grafana/dashboards/14371
         flux-cluster:
           url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/cluster.json
           datasource: Prometheus
         flux-control-plane:
           url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/control-plane.json
           datasource: Prometheus
+      smarthome:
+        homeassistant:
+          file: dashboards/homeassistant-dashboard.json
+          datasource: Prometheus  
     podAnnotations:
       configmap.reloader.stakater.com/reload: "grafana"
     sidecar:
