Change title of custom dashboard

--- a/cluster/apps/monitoring/grafana/dashboards/homeassistant-dashboard-cm.yaml
+++ b/cluster/apps/monitoring/grafana/dashboards/homeassistant-dashboard-cm.yaml
@@ -667,7 +667,7 @@ data:
         },
         "timepicker": {},
         "timezone": "",
-        "title": "New dashboard",
-        "uid": null,
+        "title": "Homeassistant",
+        "uid": "homeassistant",
         "version": 0
       }
