Advanced sidecar configuration

--- a/cluster/apps/monitoring/grafana/dashboards/homeassistant-dashboard-cm.yaml
+++ b/cluster/apps/monitoring/grafana/dashboards/homeassistant-dashboard-cm.yaml
@@ -4,6 +4,8 @@ kind: ConfigMap
 metadata:
   name: homeassistant-dashboard
   namespace: monitoring
+  annotations:
+    dashboardfolder: "Smarthome"
   labels:
     grafana_dashboard: "1"
 data:
