Refactor helm chart

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -41,7 +41,8 @@ spec:
                   severity: critical
                 annotations:
                   summary: Last rsync job failed
-                  description: "Rsync job (interval: {{ $labels.interval }}, directory: {{ $labels.directory }}) failed for instance {{ $labels.instance }} with exit code {{ $value }}."
+                  description: |-
+                    "Rsync job (interval: {{ $labels.interval }}, directory: {{ $labels.directory }}) failed for instance {{ $labels.instance }} with exit code {{ $value }}."
               - alert: PrometheusTargetMissing
                 expr: up == 0
                 for: 0m
@@ -50,16 +51,16 @@ spec:
                 annotations:
                   summary: Prometheus target missing (instance {{ $labels.instance }})
                   description: "A Prometheus target has disappeared. An exporter might be crashed.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-          # - name: ruleset_2
-          #   rules:
-          #     - alert: PrometheusAllTargetsMissing
-          #       expr: count by (job) (up) == 0
-          #       for: 0m
-          #       labels:
-          #         severity: critical
-          #       annotations:
-          #         summary: Prometheus all targets missing (instance {{ $labels.instance }})
-          #         description: "A Prometheus job does not have living target anymore.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+          - name: ruleset_2
+            rules:
+              - alert: PrometheusAllTargetsMissing
+                expr: count by (job) (up) == 0
+                for: 0m
+                labels:
+                  severity: critical
+                annotations:
+                  summary: Prometheus all targets missing (instance {{ $labels.instance }})
+                  description: "A Prometheus job does not have living target anymore.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
 
     alertmanager:
       #enabled: true
