--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -48,12 +48,21 @@ spec:
         enabled: true
         org_id: 1
         org_role: Viewer
+      auth.ldap:
+        enabled: true
+        allow_sign_up: true
+        config_file: /etc/grafana/ldap.toml        
       security:
-        allow_embedding: true
+        allow_embedding: true 
     admin:
       existingSecret: grafana-secrets
       userKey: GRAFANA_ADMIN_USER
       passwordKey: GRAFANA_ADMIN_PASSWORD
+    ldap:
+      enabled: true
+      # `existingSecret` is a reference to an existing secret containing the ldap configuration
+      # for Grafana in a key `ldap-toml`.
+      existingSecret: "grafana-ldap-toml"      
     ingress:
       enabled: true
       hostname: "grafana.${SECRET_DOMAIN}"
