--- a/cluster/apps/monitoring/grafana/kustomization.yaml
+++ b/cluster/apps/monitoring/grafana/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secrets.sops.yaml
+  - grafana-ldap-toml.sops.yaml
   - config-pvc.yaml
   - helm-release.yaml
   - dashboards
