Use discord as provider

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,16 +5,17 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:mJdzkyTHT94E,iv:b//obKZ/8XKXw6JuXEkFh+AeuRYXq3BSmvS+459hSO8=,tag:/c/SG+PobGiiK05ayMdTiQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:KWd1pTdycXkW,iv:bG8kTriZSb0C3tJADtFyciWQiROzNTP4sFtAOHzOl+Y=,tag:+DzHJUcMGJONj5+eFaNkyA==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:QWDxHYA5/9w9wRF6pv0=,iv:cyrnf+/8Vt6pMtB3YCHhjXZTfs5bJy9zRCESqefBoNs=,tag:q7dcj7tG3fnMPUYdL5gG8w==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:rl7ltMQ0lzgoldcWwboaTw==,iv:5jPhMN6lbLwDscxqC+SQoyH2FJ1qBDsEz3FtRxxTnqU=,tag:JbeRz4BrZkSazlgpt1+qdQ==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:OU1YnIvhGQFVT2W87d4=,iv:e/u50XgOO4g1uORNqWdkwKRdU2wjL2xRCZYB+TGVF8M=,tag:L+VIQVYDkbLCqZF2yOvFXg==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:9sgUJPzlqcg7dgzCxg==,iv:qanAvlnz5vqCqN/iAJPCOQW06ui9XOdeX8miOhziKvI=,tag:J6K3V394XUSSch3Mk/jShg==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:UYDruSfqS0AOrJNeSw==,iv:AfvaR7bLc8TPsaFR04sjcgP4R427ogLP47TgeirzXs8=,tag:vHRp+fcmM2bg7MYKnfKdHg==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:rvhUZecACZ9+xuY1oWskl/XOFHR7i7x++Nnbk4H/AMXzAySxLiQMt37FWArnpq8BX3VRRfXNO5fg7zIGMwDiWbJgTZt+lK2JxzNjTi4+K8swCMX4ysqi0Liy/C8RLyt32Ai7y3+Zv3NbHs91cyfR87MqnK583o8nX0WxM/xCLWWeNaSae3CJpqlyyGfq0SxJbx4fxpegiClgPEpnC0FOHYh1DduLqpxtmHJjQ/cL6Oxf33Z2cd1Z,iv:vcJ7gBqXD8+U61mfQTCQ5bnnAmUBRk1AFkl6dOesA9I=,tag:3PR/jtvy4juCkOJ2hU4VrQ==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:kl9B5Bk=,iv:+5UaznxM0cQEKxZvhdSk00yxk1QpRWhZaIbJ0pIfe5o=,tag:2UKLL2lnCho1f9f00rKGTA==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:dU9J8kGiS00tD9dZuI+mTA==,iv:zCt+pubfObakSZD8GIIjPf3gb9lygOgFLWWbCG4PQjY=,tag:kyMNPJyZiMXbTi6xw277DA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:P2q+JPcmLDDwnAizyOs=,iv:YZxMMQOFZO1FU6FLCTP+kSY9vM9d7L3GK+WVn7x1rjg=,tag:LIBwlxZAmMcnu2sfFk7POQ==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:E699/ZzoUbustpTdA7ZCbA==,iv:7C+W4lG7MSKCw1qjDeSP2g0COXKHDxrIHkIjy0C0iec=,tag:F6T/rv9rPXpXRnS1LZvMGw==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:PQkj3Q60KsZNHOTVVBM=,iv:v6Yf6H7aQd4AHH8PXcPyWtB4psEINgRLNbqQkfap+y8=,tag:EyZcxN6rKyXL9Uh2A6xNBQ==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:D5q99z33VEGT6mHJ9w==,iv:N2DFYiDgScf4QbmUbU0aO5decgk103ZJLfbJVv+UNIU=,tag:zyEU4+O1pMPZ6/lz4OkdRQ==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:JjN1xvoZGkKzjYBmOQ==,iv:xY08dtVTYLEOgdJzxQAhmd5QWz8iRbFKZNQtrKKLsBQ=,tag:WbGE18KwnVQ9JuISGz5jyw==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:udCGJR2yiyPBBwoDGc271icJb7EQN7sSk6Kg+IzdMdg3C8VA2IJ4z9vYimUStZ9rYFS3uOt4i4A+MCHrpiW/MJUSeDe+MGBtth+8iN3Gdw/5aH3cJzsLDAahx1qCGmYeeE4an3lL6mqF0K0xFJ/uQ5MYbG3MPQcpSxa8X4hmE4njJA/oIEcCyt9Ocm38zYNQgps8jCyOGtTE4nVUQGAlVzapd0/2I0d7aQQhxi1hxfgYoRoLwLx1,iv:g73wr1OIGntylE/4567QgAdWI8bcMtb3RVT5aWlg/Fg=,tag:rfVwAjSmf6xHn4Veqm+6AA==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:Apr43H8=,iv:ZeqxjQZ2Y7gqQG97g5+bJK1FOEhsLj+hOZJKVDKubZ4=,tag:Uer32fVz+0EberPwJ7GjVA==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:qE0DdfTF578UIEVgfXbiBA==,iv:7fMa3F/nZUlmwERrLXYa2cQ8h7vmPCnuXLGPVRm/8E8=,tag:MR1OKmtpKW5BIYjt3b9wEg==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:PNKTDIjFmkvxtfKWaECsoVGZbw+baf7fnL9HEjnEkjULSagQVYaWZEiexWyVMY8r93X5+6y8RpJcqL7snnppDOzFQBFwR7sEBIGqhxBwNQL/n8diwNLXRKaBdTWO0kHy1V84TjiHj6OM56sSpe25cyX4TFYJqjor,iv:c66TipKEA2mJ5sGfaHXvhsbiEVcdF/Cj5fKM8mTmp5c=,tag:hvcYOL7lWSiclRmoy8Bbxw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +25,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRMjVjS2VqV0FwOHVOYS85
-            RkxlVE94WnQzZDZyWlB2bjNIbFk0cFpBSzMwCmtrRnQxdUd5ejZiUDFVUktaSnMz
-            aWFyMkQyNEYrMTBCRkpUall6ei9RZTAKLS0tIGkzS290azYvVERnSEZKUURwWHBB
-            bGtHbi9QYUlRcE0vYmh0N1RjeU00elUK670ycDoKPRzduf98trsv7p7/+kRsA7jb
-            VTqD6N4J3HwypCV3r7MWhyTTqX6RICyFmwcTchdvb7TsU9m2w2p+bQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4UDJoY1RIdTBQajRrM0Vx
+            WC9XTnFpck1lTTZ5eCtuMmE4MVJvOWNpeGdRCkZ0ZFRoRXdFRFlKM1NCN2VIOVZk
+            VFVLVCtBSDhQcWRjaEpXc21OU0tEOTAKLS0tIDB3N3VQWFY0MjNzYk9mRkFRTG9T
+            VlUyeFVDc0RXNzdaN1BscjM2aDNJSnMKHJVRvixrCmZA5WeS+h2KM8ojDG+K8k5J
+            KCJ1R4qXdk0L4PjJk56un7pD2klCWqmapSS5DuBIYu5cYP7vpnJHPA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T19:52:13Z"
-    mac: ENC[AES256_GCM,data:m3Y/3tshRQmqDHg75cxVVnozbU183XUNzkWlv7+ESMu/O8iWphMoJ8yaWPt/3TjP/zGMu3eUGqFFx9A/jVRiSQqZUXs1VJHFZ9OuNfE5v4Ls1qU/Bstd32Wz1mkTVaWyxXpD86QOhXreKNoBRpl1ue23OksrJjYd++FA6l3IZSs=,iv:vHmZcIA17zsAOcqzBlSbZQO6mA2BsU/zPjkujVS3Npk=,tag:6PZ6A/EfANkHGbfaoaRYJQ==,type:str]
+    lastmodified: "2021-12-05T17:35:14Z"
+    mac: ENC[AES256_GCM,data:IsXnwkiZDz4fqQ16cy8tvuZVeTPZJQI9a2yETD92Uy43eRdaekY1SK8YoqUlDGZI1XjX86ZQ+KBwZV9dKez+3AjLORivM9o3eCDp1KE0OKipheM5DXibZpqs68yfDUuHgRHk4x2pmlFPapBDfJ/uCc8ugvtJnUiOgY85BYa4eus=,iv:iVjOov1W8dsDe32RRAANcFQ9Xxub15OtSD8PHlHWd6Y=,tag:0HRCBCfBBtMDyAeJFLC69A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
