--- a/cluster/base/flux-system/alert-provider.yaml
+++ b/cluster/base/flux-system/alert-provider.yaml
@@ -1,9 +1,9 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Provider
 metadata:
-  name: alertmanager
+  name: discord
   namespace: flux-system
 spec:
-  type: alertmanager
-  # webhook address (ignored if secretRef is specified)
-  address: http://prometheus-alertmanager:9093/api/v2/alerts/"
+  type: discord
+  secretRef:
+    name: SECRET_ALERT_MANAGER_DISCORD_WEBHOOK
